backend/src/logs/error_logs/exceptions.log
2025-05-18 22:41:28 [ERROR] uncaughtException: Unexpected identifier 'branch_auth'
Z:\Visual_Codes\jagya_const\backend\models\authModels\branch\index.js:43
      UPDATE branch_auth SET br_r_id = ?, br_user_id = ?, br_password = ? WHERE br_a_id = ?
             ^^^^^^^^^^^

SyntaxError: Unexpected identifier 'branch_auth'
    at wrapSafe (node:internal/modules/cjs/loader:1469:18)
    at Module._compile (node:internal/modules/cjs/loader:1491:20)
    at Object..js (node:internal/modules/cjs/loader:1689:10)
    at Module.load (node:internal/modules/cjs/loader:1318:32)
    at Function._load (node:internal/modules/cjs/loader:1128:12)
    at TracingChannel.traceSync (node:diagnostics_channel:315:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:218:24)
    at Module.require (node:internal/modules/cjs/loader:1340:12)
    at require (node:internal/modules/helpers:141:16)
    at Object.<anonymous> (Z:\Visual_Codes\jagya_const\backend\controllers\authControllers\branch\index.js:5:21)
Z:\Visual_Codes\jagya_const\backend\models\authModels\branch\index.js:43
      UPDATE branch_auth SET br_r_id = ?, br_user_id = ?, br_password = ? WHERE br_a_id = ?
             ^^^^^^^^^^^

SyntaxError: Unexpected identifier 'branch_auth'
    at wrapSafe (node:internal/modules/cjs/loader:1469:18)
    at Module._compile (node:internal/modules/cjs/loader:1491:20)
    at Object..js (node:internal/modules/cjs/loader:1689:10)
    at Module.load (node:internal/modules/cjs/loader:1318:32)
    at Function._load (node:internal/modules/cjs/loader:1128:12)
    at TracingChannel.traceSync (node:diagnostics_channel:315:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:218:24)
    at Module.require (node:internal/modules/cjs/loader:1340:12)
    at require (node:internal/modules/helpers:141:16)
    at Object.<anonymous> (Z:\Visual_Codes\jagya_const\backend\controllers\authControllers\branch\index.js:5:21)
{
  error: Z:\Visual_Codes\jagya_const\backend\models\authModels\branch\index.js:43
        UPDATE branch_auth SET br_r_id = ?, br_user_id = ?, br_password = ? WHERE br_a_id = ?
               ^^^^^^^^^^^
  
  SyntaxError: Unexpected identifier 'branch_auth'
      at wrapSafe (node:internal/modules/cjs/loader:1469:18)
      at Module._compile (node:internal/modules/cjs/loader:1491:20)
      at Object..js (node:internal/modules/cjs/loader:1689:10)
      at Module.load (node:internal/modules/cjs/loader:1318:32)
      at Function._load (node:internal/modules/cjs/loader:1128:12)
      at TracingChannel.traceSync (node:diagnostics_channel:315:14)
      at wrapModuleLoad (node:internal/modules/cjs/loader:218:24)
      at Module.require (node:internal/modules/cjs/loader:1340:12)
      at require (node:internal/modules/helpers:141:16)
      at Object.<anonymous> (Z:\Visual_Codes\jagya_const\backend\controllers\authControllers\branch\index.js:5:21),
  exception: true,
  date: 'Sun May 18 2025 22:41:28 GMT+0530 (India Standard Time)',
  process: {
    pid: 9420,
    uid: null,
    gid: null,
    cwd: 'Z:\\Visual_Codes\\jagya_const\\backend',
    execPath: 'C:\\Program Files\\nodejs\\node.exe',
    version: 'v22.11.0',
    argv: [
      'C:\\Program Files\\nodejs\\node.exe',
      'Z:\\Visual_Codes\\jagya_const\\backend\\app.js'
    ],
    memoryUsage: {
      rss: 104206336,
      heapTotal: 70172672,
      heapUsed: 50300224,
      external: 2318336,
      arrayBuffers: 21664
    }
  },
  os: { loadavg: [ 0, 0, 0 ], uptime: 962990.968 },
  trace: [
    {
      column: 18,
      file: 'node:internal/modules/cjs/loader',
      function: 'wrapSafe',
      line: 1469,
      method: null,
      native: false
    },
    {
      column: 20,
      file: 'node:internal/modules/cjs/loader',
      function: 'Module._compile',
      line: 1491,
      method: '_compile',
      native: false
    },
    {
      column: 10,
      file: 'node:internal/modules/cjs/loader',
      function: 'Object..js',
      line: 1689,
      method: '.js',
      native: false
    },
    {
      column: 32,
      file: 'node:internal/modules/cjs/loader',
      function: 'Module.load',
      line: 1318,
      method: 'load',
      native: false
    },
    {
      column: 12,
      file: 'node:internal/modules/cjs/loader',
      function: 'Function._load',
      line: 1128,
      method: '_load',
      native: false
    },
    {
      column: 14,
      file: 'node:diagnostics_channel',
      function: 'TracingChannel.traceSync',
      line: 315,
      method: 'traceSync',
      native: false
    },
    {
      column: 24,
      file: 'node:internal/modules/cjs/loader',
      function: 'wrapModuleLoad',
      line: 218,
      method: null,
      native: false
    },
    {
      column: 12,
      file: 'node:internal/modules/cjs/loader',
      function: 'Module.require',
      line: 1340,
      method: 'require',
      native: false
    },
    {
      column: 16,
      file: 'node:internal/modules/helpers',
      function: 'require',
      line: 141,
      method: null,
      native: false
    },
    {
      column: 21,
      file: 'Z:\\Visual_Codes\\jagya_const\\backend\\controllers\\authControllers\\branch\\index.js',
      function: null,
      line: 5,
      method: null,
      native: false
    }
  ],
  [Symbol(level)]: 'error'
}
